<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <!-- Project Object Model -->
    <!-- All POMs extend the Super POM unless explicitly set -->
    <!--<parent>*</parent>-->

    <groupId>ru.otus</groupId>
    <artifactId>OtusJavaHW</artifactId>
    <version>${revision}</version>

    <packaging>pom</packaging>

    <developers>
        <developer>
            <name>Mashnyaga Nikita</name>
        </developer>
    </developers>

    <modules>
        <module>HW01-maven</module>
    </modules>

  <properties>

    <!--region General-->
    <exec.mainClass>ru.otus.hw01.HelloOtus</exec.mainClass>
    <jar.name>${project.name}-${revision}</jar.name>
    <revision>2019-06-SNAPSHOT</revision>
    <java.version>12</java.version>
    <minimal.maven.version>3.5.0</minimal.maven.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <!--endregion-->

    <!--region BOMs -->
    <spring-boot.version>2.1.6.RELEASE</spring-boot.version>
    <!--endregion-->

    <!--region Libs -->
    <com.google.guava.version>28.0-jre</com.google.guava.version>
    <!--endregion-->

    <!--region Testing - JUnit, AssertJ, Mockito, Hacrest -->
    <!--endregion-->

    <!--region Plugins-->
    <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
    <maven.compiler.parameters>true</maven.compiler.parameters>
    <maven.compiler.release>${java.version}</maven.compiler.release>
    <maven-assembly-plugin.version>3.1.1</maven-assembly-plugin.version>
    <maven-assembly-plugin.descriptorSuffix>jar-with-dependencies</maven-assembly-plugin.descriptorSuffix>
    <!--endregion-->

  </properties>

  <dependencyManagement>
    <dependencies>

      <!--region BOMs-->
      <!--endregion-->

      <dependency>
        <groupId>com.google.guava</groupId>
        <artifactId>guava</artifactId>
        <version>${com.google.guava.version}</version>
        <exclusions>
          <exclusion>
            <groupId>com.google.errorprone</groupId>
            <artifactId>error_prone_annotations</artifactId>
          </exclusion>
        </exclusions>
      </dependency>

      <!--region Common Annotations (CheckerFramework, JetBrains, SpotBugs, ErrorProne) -->
      <!--endregion-->

      <!--region test-->
      <!--endregion-->

    </dependencies>
  </dependencyManagement>

  <dependencies>

    <!--region Test dependencies - JUnit Jupiter, AssertJ, Hamcrest, Mockito -->
    <!--endregion-->

  </dependencies>

  <build>

    <defaultGoal>verify exec:exec</defaultGoal>

    <pluginManagement>
      <plugins>

        <plugin>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>${maven-compiler-plugin.version}</version>
          <configuration>
            <parameters>true</parameters>
            <compilerArgs>
              <arg>--enable-preview</arg>
            </compilerArgs>
          </configuration>
        </plugin>
        <plugin>
          <artifactId>maven-assembly-plugin</artifactId>
          <version>${maven-assembly-plugin.version}</version>
          <configuration>
            <descriptorRefs>
              <descriptorRef>${maven-assembly-plugin.descriptorSuffix}</descriptorRef>
            </descriptorRefs>
            <archive>
              <manifest>
                <mainClass>${exec.mainClass}</mainClass>
              </manifest>
            </archive>
          </configuration>
          <executions>
            <execution>
              <id>make-assembly</id>
              <phase>package</phase>
              <goals>
                <goal>single</goal>
              </goals>
            </execution>
          </executions>
        </plugin>

      </plugins>
    </pluginManagement>

    <plugins>

      <plugin>
        <artifactId>maven-assembly-plugin</artifactId>
      </plugin>

    </plugins>

  </build>
</project>
